--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node bin/www",
     "dev": "node webpack.server.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --progress --config webpack.config.prod.js"
   },
   "keywords": [
     "React",
