--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,12 @@
 {
   "presets": [
     "es2015",
-    "stage-0",
     "react"
   ],
   "plugins":[
-    "add-module-exports"
-  ],
-  "env": {
-    "client": {
-      "plugins": []
-    }
-  }
+    "add-module-exports",
+    "transform-function-bind",
+    "syntax-dynamic-import",
+    "transform-class-properties"
+  ]
 }
